[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "yt-concate-cli"
version = "0.1.3"
authors = [
    { name = "Mu", email = "muchen31415926@gmail.com" },
]
description = "Produce a concatenated video of clips that mention a word from a channel ID."
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "python-dotenv",
    "yt-dlp",
    "moviepy",
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/muchen31415926/yt-concate"

[tool.setuptools.packages.find]
where = ["."]
include = ["yt_concate*"]